--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,3 +20,11 @@ jobs:
 
       - name: Run the Tests
         run: go test ./... -cover
+
+  style:
+    name: style
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: run style
+        run: test -z "$(go fmt ./...)"
