--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,18 @@ jobs:
       - name: Run the Tests
         run: go test ./... -cover
 
-  style:
-    name: style
+  Style:
+    name: Style
     runs-on: ubuntu-latest
 
     steps:
-      - name: run styles
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.23.0"
+
+      - name: Run styles
         run: test -z "$(go fmt ./...)"
