--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,9 @@ jobs:
           go-version: "1.23.0"
 
       - name: Install staticcheck
-        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+        run: |
+          go install honnef.co/go/tools/cmd/staticcheck@latest
+          echo "$HOME/go/bin" >> $GITHUB_PATH
 
       - name: Run styles
         run: test -z "$(go fmt ./...)"
