--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 
 jobs:
-  deploy:
+  Deploy:
     name: Full Deploy
     runs-on: ubuntu-latest
 
@@ -16,9 +16,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.23.0"
+          go-version: "1.22.0"
 
       - name: Build via script
-        run: |
-          cd scripts
-          ./buildprod.sh
+        run: ./scripts/buildprod.sh
