--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,6 +10,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - id: "auth"
+        uses: "google-github-actions/auth@v2"
+        with:
+          credentials_json: "${{ secrets.GCP_CREDENTIALS }}"
+
+      - name: "Set up Cloud SDK"
+        uses: "google-github-actions/setup-gcloud@v2"
+
+      - name: "Use gcloud CLI"
+        run: "gcloud info"
+
       - name: Check out the code from git
         uses: actions/checkout@v4
 
@@ -20,3 +31,6 @@ jobs:
 
       - name: Build via script
         run: ./scripts/buildprod.sh
+
+      - name: Submit the container
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-457102/notely-ar-repo/notely-ar-repo:latest .
