--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,17 +10,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - id: "auth"
-        uses: "google-github-actions/auth@v2"
-        with:
-          credentials_json: "${{ secrets.GCP_CREDENTIALS }}"
-
-      - name: "Set up Cloud SDK"
-        uses: "google-github-actions/setup-gcloud@v2"
-
-      - name: "Use gcloud CLI"
-        run: "gcloud info"
-
       - name: Check out the code from git
         uses: actions/checkout@v4
 
@@ -28,6 +17,16 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.22.0"
+
+      - name: "Set up Cloud SDK with Auth"
+        uses: "google-github-actions/setup-gcloud@v2"
+        with:
+          project_id: "notely-457102"
+          service_account_key: "${{ secrets.GCP_CREDENTIALS }}"
+          export_default_credentials: true
+
+      - name: "Use gcloud CLI"
+        run: "gcloud info"
 
       - name: Build via script
         run: ./scripts/buildprod.sh
