--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,6 +10,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - id: "auth"
+        uses: "google-github-actions/auth@v2"
+        with:
+          credentials_json: "${{ secrets.GCP_CREDENTIALS }}"
+
+      - name: "Set up Cloud SDK"
+        uses: "google-github-actions/setup-gcloud@v2"
+
+      - name: "Use gcloud CLI"
+        run: "gcloud info"
+
       - name: Check out the code from git
         uses: actions/checkout@v4
 
@@ -18,18 +29,11 @@ jobs:
         with:
           go-version: "1.22.0"
 
-      - name: "Set up Cloud SDK with Auth"
-        uses: "google-github-actions/setup-gcloud@v2"
-        with:
-          project_id: "notely-457102"
-          service_account_key: "${{ secrets.GCP_CREDENTIALS }}"
-          export_default_credentials: true
-
-      - name: "Use gcloud CLI"
-        run: "gcloud info"
-
       - name: Build via script
         run: ./scripts/buildprod.sh
+
+      - name: auth to artifact
+        run: gcloud auth configure-docker \ us-central1-docker.pkg.dev
 
       - name: Submit the container
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-457102/notely-ar-repo/notely-ar-repo:latest .
