--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,3 +37,6 @@ jobs:
 
       - name: Submit the container
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-457102/notely-ar-repo/notely-ar-repo:latest .
+
+      - name: Deploy to Cloud Run
+        run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-457102/notely-ar-repo/notely-ar-repo:latest --region us-central1 --allow-unauthenticated --project notely-457102 --max-instances=4
