--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,7 +8,8 @@ jobs:
   Deploy:
     name: Deploy
     runs-on: ubuntu-latest
-
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
     steps:
       - name: Check out the code from git
         uses: actions/checkout@v4
@@ -18,8 +19,16 @@ jobs:
         with:
           go-version: "1.22.0"
 
+      - name: Install Goose
+        run: |
+          go install github.com/pressly/goose/v3/cmd/goose@latest
+          echo "$HOME/go/bin" >> $GITHUB_PATH
+
       - name: Build via script
         run: ./scripts/buildprod.sh
+
+      - name: Run Security Check now
+        run: ./scripts/migrateup.sh
 
       - id: "auth"
         uses: "google-github-actions/auth@v2"
